// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m  [2mSearch:[22m /tmp/█
[36m│[39m  [33mNo matches found[39m
[36m│[39m  [2m[2m↑/↓[22m[2m to select • [2mEnter:[22m[2m confirm • [2mType:[22m[2m to search[22m
[36m└[39m",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2m/tmp/[22m[29m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = false) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m  [2mSearch:[22m /tmp/█
[36m│[39m  [33mNo matches found[39m
[36m│[39m  [2m[2m↑/↓[22m[2m to select • [2mEnter:[22m[2m confirm • [2mType:[22m[2m to search[22m
[36m└[39m",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2mSearch:[22m /tmp/x█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2mSearch:[22m /tmp/xy█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2m/tmp/xy[22m[29m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m  [2mSearch:[22m /tmp/█
[36m│[39m  [33mNo matches found[39m
[36m│[39m  [2m[2m↑/↓[22m[2m to select • [2mEnter:[22m[2m confirm • [2mType:[22m[2m to search[22m
[36m└[39m",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2m/tmp/[22m[29m",
  "
",
  "<cursor.show>",
]
`;

exports[`text (isCI = true) > renders cancelled value if one set 1`] = `
[
  "<cursor.hide>",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m
[36m│[39m  [2mSearch:[22m /tmp/█
[36m│[39m  [33mNo matches found[39m
[36m│[39m  [2m[2m↑/↓[22m[2m to select • [2mEnter:[22m[2m confirm • [2mType:[22m[2m to search[22m
[36m└[39m",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2mSearch:[22m /tmp/x█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "[36m│[39m  [2mSearch:[22m /tmp/xy█",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "[31m■[39m  foo
[90m│[39m  [9m[2m/tmp/xy[22m[29m",
  "
",
  "<cursor.show>",
]
`;
